Allow user to search movies, as well as to filter them and sort them

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
   "rules": {
     "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/explicit-module-boundary-types": 0,
+    "@typescript-eslint/ban-ts-comment": 0,
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "error",
     "ts-expect-error": 0
