--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-select": "^4.0.17",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.3.2"
   },
