--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,2 @@
-REACT_APP_THE_MOVIE_DB_TOKEN=
-REACT_APP_BASE_URL=
+REACT_APP_THE_MOVIE_DB_TOKEN=some1random2example3of4an5token
+REACT_APP_BASE_URL=https://api.themoviedb.org/3/
